# discord_ticket_bot

./: Cargo.toml  README.md  bacon.toml
database/: script.sql
src/: database.rs  framework.rs  handler.rs  helper.rs  logging.rs  main.rs  tickets.rs
src/handler/: commands.rs  events.rs
src/handler/commands/: server.rs  setup.rs  subject.rs  ticket.rs
src/handler/commands/server/: reset.rs  setup.rs
src/handler/commands/server/setup/: roles.rs
src/handler/commands/setup/: roles.rs
src/handler/commands/subject/: add.rs  list.rs  remove.rs
src/handler/commands/ticket/: claim.rs  close.rs
src/helper/: embed.rs  fuzzy_match.rs  parser.rs
src/tickets/: claim.rs  close.rs  create.rs
