[package]
name = "desquestion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.6.1"
eyre = "0.6.12"
dotenv = "0.15.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.8.0", features = ["postgres", "macros", "runtime-tokio"] }
